fixed colors and spacing, linked button to login page, cleaned up code

--- a/front-end/src/PrimaryNav.css
+++ b/front-end/src/PrimaryNav.css
@@ -1,25 +1,8 @@
 .nav-color {
-    /* background-color: #8093F1; */
-    background-color: green;
+    background-color: #8093F1;
+    margin-bottom: 20px;
 }
 
-/* nav {
-  border: 1px solid black;
-  border-width: 1px 0 1px 19px; */ /* no border on left or right */
-  /* font-family: georgia;
-  padding: 20px;
-  margin: 20px 0; */ /* no margin on left or right */
-  /* text-align: center;
-  background-color: #8093F1
+.nav-button:hover {
+  color: #8093F1;
 }
-
-nav a {
-  text-decoration: none;
-  color: black;
-  margin: 20px;
-}
-
-nav a:hover {
-  text-decoration: underline;
-  background-color: yellow;
-} */
